# bcc

./: CMakeLists.txt  Dockerfile.tests
.github/workflows/: bcc-build.yml  bcc-test.yml
docker/: Dockerfile.tests
src/cc/: CMakeLists.txt  bcc_common.cc  bcc_common.h  bpf_module.cc  bpf_module.h  bpf_module_runtime_opt_engine.cc  bpf_module_rw_engine.cc  jhash.bc  jhash.ll  libbpf.c  libbpf.h  macro_logger.h  table_desc.h
src/cc/api/: BPF.cc  BPF.h  BPFTable.cc  BPFTable.h
src/cc/export/: helpers.h
src/cc/frontends/b/: codegen_llvm.cc  loader.cc  parser.yy
src/cc/frontends/clang/: b_frontend_action.cc  b_frontend_action.h  loader.cc  loader.h
src/cc/passes/: BPFMapInstrumentationPass.cpp  BPFMapInstrumentationPass.h  CMakeLists.txt  DynamicMapOptAnalysisPass.cpp  DynamicMapOptAnalysisPass.h  JITTableRuntimePass.cpp  JITTableRuntimePass.h  MorpheusCompiler.cpp  MorpheusCompiler.h  MorpheusCompilerConfig.h  jhash.cc  jhash.h  utils.cpp  utils.h
src/cc/passes/builder/: CMakeLists.txt  irbuilderbpf.cpp  irbuilderbpf.h
tests/cc/: test_shared_table.cc  test_static.c
tests/python/: test_tracepoint.py
